--- a/revisi_sidang.html
+++ b/revisi_sidang.html
@@ -50,14 +50,14 @@
                   <span class="hide-menu">Dashboard</span>
                 </a>
               </li>
-              <!-- <li class="nav-small-cap">
+              <li class="nav-small-cap">
                 <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
                 <span class="hide-menu">PENDAFTARAN
                   <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
                 </span>
               </li>
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./ui-buttons.html" aria-expanded="false">
+                <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/dosen/daftar_proyek.html" aria-expanded="false">
                   <span>
                     <i class="ti ti-presentation-analytics"></i>
                   </span>
@@ -65,7 +65,7 @@
                 </a>
               </li>
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./ui-forms.html" aria-expanded="false">
+                <a class="sidebar-link" href="#" aria-expanded="false">
                   <span>
                     <i class="ti ti-clipboard-list"></i>
                   </span>
@@ -73,13 +73,13 @@
                 </a>
               </li>
               <li class="sidebar-item">
-                  <a class="sidebar-link" href="./ui-typography.html" aria-expanded="false">
+                  <a class="sidebar-link" href="#" aria-expanded="false">
                     <span>
                       <i class="ti ti-school"></i>
                     </span>
                     <span class="hide-menu">Tugas Akhir</span>
                   </a>
-                </li> -->
+                </li>
               <li class="nav-small-cap">
                 <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
                 <span class="hide-menu">PENGAJUAN SIDANG
