create href sub menu pendaftaran proyek html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </span>
               </li>
               <li class="sidebar-item">
-                <a class="sidebar-link" href="./ui-buttons.html" aria-expanded="false">
+                <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/dosen/daftar_proyek.html" aria-expanded="false">
                   <span>
                     <i class="ti ti-presentation-analytics"></i>
                   </span>
