create href to page pilih dospim aktif

--- a/dosen/daftar_proyek.html
+++ b/dosen/daftar_proyek.html
@@ -202,7 +202,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Penentuan Pembimbing</h5>
                     <p class="card-text">Sebelum membuka pendaftaran proyek 1, lakukan terlebih dahulu pemilihan pembimbing.</p>
-                    <a href="#" class="btn btn-primary" id="proyek1Btn">Pemilihan Pembimbing</a>
+                    <a href="pilih_dospim_p1.html" class="btn btn-primary">Pemilihan Pembimbing</a>
                   </div>
                 </div>
               </div>
