--- a/dosen/update_nilai_p3.html
+++ b/dosen/update_nilai_p3.html
@@ -276,7 +276,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-end mb-3">
-            <button type="button" class="btn btn-info me-2">Update</button>
+            <button id="updateButton" type="button" class="btn btn-info me-2">Update</button>
             <a href="detail_nilai_p3.html" type="button" class="btn btn-warning">Kembali</a>
         </div>
         </div>
