--- a/dosen/update_nilai_p3.html
+++ b/dosen/update_nilai_p3.html
@@ -231,16 +231,16 @@
                 <div class="mb-3" style="display: grid; grid-template-columns: 1fr 1fr;">
                     <div style="margin-right: 10px;">
                         <label for="tipeBimbingan" class="form-label">Tipe Bimbingan</label>
-                        <input type="text" class="form-control" id="tipeBimbingan" value="p3" readonly>
+                        <input type="text" class="form-control" id="tipeBimbingan" value="Proyek 3" readonly>
                     </div>
                     <div style="margin-right: 10px;">
                         <label for="thnAjaran" class="form-label">Tahun Ajaran</label>
-                        <input type="text" class="form-control" id="thnAjaran" value="2324-1" readonly>
+                        <input type="text" class="form-control" id="thnAjaran" value="2023-2024" readonly>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="programStudi" class="form-label">Program Studi</label>
-                    <input type="text" class="form-control" id="programStudi" value="14" readonly>
+                    <input type="text" class="form-control" id="programStudi" value="D4 Teknik Informatika" readonly>
                 </div>
                 <hr>
                 <!-- Nilai Sidang Proyek 3 -->
