--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
               </li>
               <li class="sidebar-item">
-                <a class="sidebar-link" href="#" aria-expanded="false">
+                <a class="sidebar-link" href="dosen/daftar_internship.html" aria-expanded="false">
                   <span>
                     <i class="ti ti-clipboard-list"></i>
                   </span>
