--- a/dosen/list_daftar_i2.html
+++ b/dosen/list_daftar_i2.html
@@ -282,6 +282,7 @@
       </div>
     </div>
   </div>
+  <script src="../static/dosen/list_daftar_i2.js" type="module"></script>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/sidebarmenu.js"></script>
