--- a/dosen/list_daftar_i2.html
+++ b/dosen/list_daftar_i2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>APPESI ULBI</title>
-  <link rel="shortcut icon" type="image/png" href="assets/images/logos/favicon-ulbi.png" />
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logos/favicon-ulbi.png" />
   <link rel="stylesheet" href="../assets/css/styles.min.css" />
   <link rel="stylesheet" href="../assets/css/table.css" />
 </head>
@@ -248,10 +248,9 @@
                         </tr>
                         <!-- end table row-->
                       </thead>
-                      <tbody id="tablebody">
-                        <!-- JS Data -->
-                        <!-- end table row -->
-                      </tbody>
+
+                      <tbody id="tablebody"></tbody>
+                      
                     </table>
                   <!-- end table -->
                   </div>
@@ -274,7 +273,7 @@
                 <!-- end Button Pagination -->
               </div>
             </div>
-            <h7 class="fw-semibold" id="jumlahPendaftaranP1">Jumlah Pendafaran : </h7>
+            <h7 class="fw-semibold" id="jumlahPendaftaranI2">Jumlah Pendafaran : </h7>
           </div>
         </div>
         </div>
