coba render data

--- a/dosen/list_daftar_i2.html
+++ b/dosen/list_daftar_i2.html
@@ -248,9 +248,11 @@
                         </tr>
                         <!-- end table row-->
                       </thead>
+                      <script src="../static/dosen/list_daftar_i2.js" type="module"></script>
+                      <tbody id="tablebody">
 
-                      <tbody id="tablebody"></tbody>
-                      
+                      </tbody>
+
                     </table>
                   <!-- end table -->
                   </div>
@@ -281,7 +283,6 @@
       </div>
     </div>
   </div>
-  <script src="../static/dosen/list_daftar_i2.js" type="module"></script>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
   <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/sidebarmenu.js"></script>
