--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -39,98 +39,26 @@
             <ul id="sidebarnav">
               <li class="nav-small-cap">
                 <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                <span class="hide-menu">Home
-                  <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-                </span>
+
               </li>
               <li class="sidebar-item">
-                <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/index.html" aria-expanded="false">
+                <a class="sidebar-link" href="../../index.html" aria-expanded="false">
                   <span>
-                    <i class="ti ti-layout-dashboard"></i>
+                    <i class="ti ti-arrow-left"></i>
                   </span>
-                  <span class="hide-menu">Dashboard</span>
+                  <span class="hide-menu">Back</span>
                 </a>
               </li>
               <li class="nav-small-cap">
                 <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                <span class="hide-menu">PENDAFTARAN
-                  <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-                </span>
+
               </li>
               <li class="sidebar-item">
                 <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/dosen/daftar_proyek.html" aria-expanded="false">
-                  <span>
-                    <i class="ti ti-presentation-analytics"></i>
-                  </span>
-                  <span class="hide-menu">Proyek</span>
+                  <span class="hide-menu">Dashboard Koordinator</span>
                 </a>
               </li>
-              <li class="sidebar-item">
-                <a class="sidebar-link" href="dosen/daftar_internship.html" aria-expanded="false">
-                  <span>
-                    <i class="ti ti-clipboard-list"></i>
-                  </span>
-                  <span class="hide-menu">Internship</span>
-                </a>
-              </li>
-              <li class="sidebar-item">
-                  <a class="sidebar-link" href="#" aria-expanded="false">
-                    <span>
-                      <i class="ti ti-school"></i>
-                    </span>
-                    <span class="hide-menu">Tugas Akhir</span>
-                  </a>
-                </li>
-              <li class="nav-small-cap">
-                <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                <span class="hide-menu">PENGAJUAN SIDANG
-                  <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-                </span>
-              </li>
-              <li class="sidebar-item">
-                <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/sidang_proyek.html" aria-expanded="false">
-                  <span>
-                    <i class="ti ti-presentation-analytics"></i>
-                  </span>
-                  <span class="hide-menu">Proyek</span>
-                </a>
-              </li>
-              <li class="nav-small-cap">
-                <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                <span class="hide-menu">REVISI SIDANG
-                  <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-                </span>
-              </li>
-              <li class="sidebar-item">
-                <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/revisi_sidang.html" aria-expanded="false">
-                  <span>
-                    <i class="ti ti-presentation-analytics"></i>
-                  </span>
-                  <span class="hide-menu">Input Revisi Sidang</span>
-                </a>
-              </li>
-              <li class="nav-small-cap">
-                <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-                <span class="hide-menu">NILAI SIDANG
-                  <span class="badge bg-warning-500 capitalize" id="badgeJalur" style="color: rgb(255, 0, 0); font-size: 9px; padding: 1px 4px; border-radius: 5px;">Maintenance</span>
-                </span>
-              </li>
-              <li class="sidebar-item">
-                <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/nilai_sidang_proyek.html" aria-expanded="false">
-                  <span>
-                    <i class="ti ti-presentation-analytics"></i>
-                  </span>
-                  <span class="hide-menu">Proyek</span>
-                </a>
-              </li>
-              <li class="sidebar-item">
-                <a class="sidebar-link" href="https://euis.ulbi.ac.id/APPESI-admin/nilai_sidang_internship.html" aria-expanded="false">
-                  <span>
-                    <i class="ti ti-clipboard-list"></i>
-                  </span>
-                  <span class="hide-menu">Internship</span>
-                </a>
-              </li>
+
             </ul>
           </nav>
           <!-- End Sidebar navigation -->
