--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -117,7 +117,7 @@
                             <div class="card-body">
                                 <h1>21</h1>
                                 <h5 class="card-title">Pengajuan Masuk</h5>
-                                <p class="card-text">Pengajuan intership 2 yang harus di review dan approval</p>
+                                <p class="card-text">Pengajuan internship 2 yang harus di review dan approval</p>
                             </div>
                         </div>
                     
