Prepare stat card value
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -115,7 +115,7 @@
 
                         <div class="card text-white bg-primary mb-3" style="min-height: 175px;">
                             <div class="card-body">
-                                <h1>21</h1>
+                                <h1 id="pm-number">N/A</h1>
                                 <h5 class="card-title">Pengajuan Masuk</h5>
                                 <p class="card-text">Pengajuan internship 2 yang harus di review dan approval</p>
                             </div>
@@ -127,7 +127,7 @@
 
                         <div class="card text-white bg-success mb-3" style="min-height: 175px;">
                             <div class="card-body">
-                                <h1>21</h1>
+                                <h1 id="na-number">N/A</h1>
                                 <h5 class="card-title">Pengajuan Telah Di Approve</h5>
                                 <p class="card-text">Pengajuan yang sudah di-approve</p>
                             </div>
@@ -139,7 +139,7 @@
 
                         <div class="card text-white bg-warning mb-3" style="min-height: 175px;">
                             <div class="card-body">
-                                <h1>21</h1>
+                                <h1 id="rp-number">N/A</h1>
                                 <h5 class="card-title">Pengajuan Revisi</h5>
                                 <p class="card-text">Pengajuan yang diberi revisi untuk diperbaiki</p>
                             </div>
