Buat tampilan Pengajuan telah di approve
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -168,31 +168,35 @@
               <h2 class="mb-4">Statistik Pengajuan</h2>
               <div id="body-matkul" class="row">
                 <div class="col-md-4">
-                  <div
-                    class="card text-white bg-primary mb-3"
-                    style="min-height: 175px"
-                  >
-                    <div class="card-body">
-                      <h1 id="pm-number">N/A</h1>
-                      <h5 class="card-title">Pengajuan Masuk</h5>
-                      <p class="card-text">
-                        Pengajuan internship 2 yang harus di review dan approval
-                      </p>
+                  <a href="#pm-body">
+                    <div
+                      class="card text-white bg-primary mb-3"
+                      style="min-height: 175px"
+                    >
+                      <div class="card-body">
+                        <h1 id="pm-number">N/A</h1>
+                        <h5 class="card-title">Pengajuan Masuk</h5>
+                        <p class="card-text">
+                          Pengajuan internship 2 yang harus di review dan approval
+                        </p>
+                      </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
 
                 <div class="col-md-4">
-                  <div
-                    class="card text-white bg-success mb-3"
-                    style="min-height: 175px"
-                  >
-                    <div class="card-body">
-                      <h1 id="na-number">N/A</h1>
-                      <h5 class="card-title">Pengajuan Telah Di Approve</h5>
-                      <p class="card-text">Pengajuan yang sudah di-approve</p>
-                    </div>
-                  </div>
+                  <a href="#na-body">
+                    <div
+                      class="card text-white bg-success mb-3"
+                      style="min-height: 175px"
+                    >
+                      <div class="card-body">
+                        <h1 id="na-number">N/A</h1>
+                        <h5 class="card-title">Pengajuan Telah Di Approve</h5>
+                        <p class="card-text">Pengajuan yang sudah di-approve</p>
+                      </div>
+                    </div>                    
+                  </a>
                 </div>
 
                 <div class="col-md-4">
@@ -212,7 +216,7 @@
               </div>
             </div>
 
-            <div class="card-body">
+            <div id="pm-body" class="card-body">
               <h2 class="mb-4">Pengajuan Masuk</h2>
               <div id="body-pm" class="row">
                 <div class="col-md-6">
@@ -276,6 +280,71 @@
                 </div>
               </div>
             </div>
+            <div id="na-body" class="card-body">
+              <h2 class="mb-4">Pengajuan Telah Di Approve</h2>
+              <div id="body-pm" class="row">
+                <div class="col-md-6">
+                  <div
+                    class="card text-white bg-grey mb-2"
+                    style="min-height: 175px"
+                  >
+                    <div class="card-body">
+                      <h4 id="pm-number">John Doe</h4>
+                      <h5 class="card-title">Ini Judul Proposal</h5>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <button
+                          type="button"
+                          class="w-100 btn btn-outline-primary"
+                        >
+                          Proposal
+                        </button>
+                      </div>
+                      <div class="col">
+                        <button
+                          type="button"
+                          class="w-100 btn btn-outline-primary"
+                        >
+                          Pendukung
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6">
+                  <div
+                    class="card text-white bg-grey mb-2"
+                    style="min-height: 175px"
+                  >
+                    <div class="card-body">
+                      <h4 id="pm-number">John Doe</h4>
+                      <h5 class="card-title">Ini Judul Proposal</h5>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <button
+                          type="button"
+                          class="w-100 btn btn-outline-primary"
+                        >
+                          Proposal
+                        </button>
+                      </div>
+                      <div class="col">
+                        <button
+                          type="button"
+                          class="w-100 btn btn-outline-primary"
+                        >
+                          Pendukung
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
           </div>
           <!-- Content End -->
         </div>
