--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -219,129 +219,13 @@
             <div id="pm-body" class="card-body">
               <h2 class="mb-4">Pengajuan Masuk</h2>
               <div id="body-pm" class="row">
-                <div class="col-md-6">
-                  <div
-                    class="card text-white bg-grey mb-2"
-                    style="min-height: 175px"
-                  >
-                    <div class="card-body">
-                      <h4 id="pm-number">John Doe</h4>
-                      <h5 class="card-title">Ini Judul Proposal</h5>
-                    </div>
-                    <div class="row">
-                      <div class="col">
-                        <button
-                          type="button"
-                          class="w-100 btn btn-outline-primary"
-                        >
-                          Proposal
-                        </button>
-                      </div>
-                      <div class="col">
-                        <button
-                          type="button"
-                          class="w-100 btn btn-outline-primary"
-                        >
-                          Pendukung
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
-                  <div
-                    class="card text-white bg-grey mb-2"
-                    style="min-height: 175px"
-                  >
-                    <div class="card-body">
-                      <h4 id="pm-number">John Doe</h4>
-                      <h5 class="card-title">Ini Judul Proposal</h5>
-                    </div>
-                    <div class="row">
-                      <div class="col">
-                        <button
-                          type="button"
-                          class="w-100 btn btn-outline-primary"
-                        >
-                          Proposal
-                        </button>
-                      </div>
-                      <div class="col">
-                        <button
-                          type="button"
-                          class="w-100 btn btn-outline-primary"
-                        >
-                          Pendukung
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                <h5 class="text-center mt-8 mb-8">Belum ada data</h5>
               </div>
             </div>
             <div id="na-body" class="card-body">
               <h2 class="mb-4">Pengajuan Telah Di Approve</h2>
               <div id="body-pm" class="row">
-                <div class="col-md-6">
-                  <div
-                    class="card text-white bg-grey mb-2"
-                    style="min-height: 175px"
-                  >
-                    <div class="card-body">
-                      <h4 id="pm-number">John Doe</h4>
-                      <h5 class="card-title">Ini Judul Proposal</h5>
-                    </div>
-                    <div class="row">
-                      <div class="col">
-                        <button
-                          type="button"
-                          class="w-100 btn btn-outline-primary"
-                        >
-                          Proposal
-                        </button>
-                      </div>
-                      <div class="col">
-                        <button
-                          type="button"
-                          class="w-100 btn btn-outline-primary"
-                        >
-                          Pendukung
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
-                  <div
-                    class="card text-white bg-grey mb-2"
-                    style="min-height: 175px"
-                  >
-                    <div class="card-body">
-                      <h4 id="pm-number">John Doe</h4>
-                      <h5 class="card-title">Ini Judul Proposal</h5>
-                    </div>
-                    <div class="row">
-                      <div class="col">
-                        <button
-                          type="button"
-                          class="w-100 btn btn-outline-primary"
-                        >
-                          Proposal
-                        </button>
-                      </div>
-                      <div class="col">
-                        <button
-                          type="button"
-                          class="w-100 btn btn-outline-primary"
-                        >
-                          Pendukung
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                <h5 class="text-center mt-8 mb-8">Belum ada data</h5>
               </div>
             </div>
             
