Implementasi Logic awal tampilan pengajuan masuk
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -228,12 +228,18 @@
                 <h5 class="text-center mt-8 mb-8">Belum ada data</h5>
               </div>
             </div>
-            
+            <div id="rp-body" class="card-body">
+              <h2 class="mb-4">Pengajuan Telah Di Approve</h2>
+              <div id="body-pm" class="row">
+                <h5 class="text-center mt-8 mb-8">Belum ada data</h5>
+              </div>
+            </div>
           </div>
           <!-- Content End -->
         </div>
       </div>
     </div>
+    <script src="./static/index.js" type="module"></script>
     <script src="../../assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="../../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../assets/js/sidebarmenu.js"></script>
