Hide text placeholder pengajuan jika ada data
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -219,19 +219,19 @@
             <div id="pm-body" class="card-body">
               <h2 class="mb-4">Pengajuan Masuk</h2>
               <div id="body-pm" class="row">
-                <h5 class="text-center mt-8 mb-8">Belum ada data</h5>
+                <h5 id="placeholder-pm" class="text-center mt-8 mb-8">Belum ada data</h5>
               </div>
             </div>
             <div id="na-body" class="card-body">
               <h2 class="mb-4">Pengajuan Telah Di Approve</h2>
               <div id="body-pm" class="row">
-                <h5 class="text-center mt-8 mb-8">Belum ada data</h5>
+                <h5 id="placeholder-na" class="text-center mt-8 mb-8">Belum ada data</h5>
               </div>
             </div>
             <div id="rp-body" class="card-body">
               <h2 class="mb-4">Pengajuan Telah Di Approve</h2>
               <div id="body-pm" class="row">
-                <h5 class="text-center mt-8 mb-8">Belum ada data</h5>
+                <h5 id="placeholder-rp" class="text-center mt-8 mb-8">Belum ada data</h5>
               </div>
             </div>
           </div>
