Perbaiki text kategori pengajuan yang di revisi
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -229,7 +229,7 @@
               </div>
             </div>
             <div id="rp-body" class="card-body">
-              <h2 class="mb-4">Pengajuan Telah Di Approve</h2>
+              <h2 class="mb-4">Pengajuan Yang di Revisi</h2>
               <div id="body-pm" class="row">
                 <h5 id="placeholder-rp" class="text-center mt-8 mb-8">Belum ada data</h5>
               </div>
