Perbaiki Link sidebar Dashboard Koordinator
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -79,7 +79,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link"
-                  href="https://euis.ulbi.ac.id/APPESI-admin/dosen/daftar_proyek.html"
+                  href="/koordinator/i2/index.html"
                   aria-expanded="false"
                 >
                   <span class="hide-menu">Dashboard Koordinator</span>
