--- a/koordinator/i2/detail.html
+++ b/koordinator/i2/detail.html
@@ -81,7 +81,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link"
-                  href="../../index.html"
+                  href="/index.html"
                   aria-expanded="false"
                 >
                   <span>
@@ -96,7 +96,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link"
-                  href="https://euis.ulbi.ac.id/APPESI-admin/dosen/daftar_proyek.html"
+                  href="/koordinator/i2/index.html"
                   aria-expanded="false"
                 >
                   <span class="hide-menu">Dashboard Koordinator</span>
