Tampilkan data pengajuan dalam bentuk tabel
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -216,22 +216,58 @@
               </div>
             </div>
 
-            <div id="pm-body" class="card-body">
-              <h2 class="mb-4">Pengajuan Masuk</h2>
-              <div id="body-pm" class="row">
-                <h5 id="placeholder-pm" class="text-center mt-8 mb-8">Belum ada data</h5>
+            <div>
+              <h2>Pengajuan Masuk</h2>
+              <div>
+                <table class="table table-dark text-center">
+                  <thead>
+                    <tr>
+                      <th scope="col">NPM</th>
+                      <th scope="col">Judul</th>
+                      <th scope="col">Pembimbing 1</th>
+                      <th scope="col">Pembimbing 2</th>
+                      <th scope="col">Proposal</th>
+                      <th scope="col">Portofolio</th>
+                    </tr>
+                  </thead>
+                  <tbody id="pm-body"></tbody>
+                </table>
               </div>
             </div>
-            <div id="na-body" class="card-body">
+            <div class="card-body">
               <h2 class="mb-4">Pengajuan Telah Di Approve</h2>
-              <div id="body-pm" class="row">
-                <h5 id="placeholder-na" class="text-center mt-8 mb-8">Belum ada data</h5>
+              <div class="row">
+                <table class="table table-dark">
+                  <thead>
+                    <tr>
+                      <th scope="col">NPM</th>
+                      <th scope="col">Judul</th>
+                      <th scope="col">Pembimbing 1</th>
+                      <th scope="col">Pembimbing 2</th>
+                      <th scope="col">Proposal</th>
+                      <th scope="col">Portofolio</th>
+                    </tr>
+                  </thead>
+                  <tbody id="na-body"></tbody>
+                </table>
               </div>
             </div>
-            <div id="rp-body" class="card-body">
+            <div class="card-body">
               <h2 class="mb-4">Pengajuan Yang di Revisi</h2>
-              <div id="body-pm" class="row">
-                <h5 id="placeholder-rp" class="text-center mt-8 mb-8">Belum ada data</h5>
+              <div class="row">
+                <table class="table table-dark">
+                  <thead>
+                    <tr>
+                      <th scope="col">NPM</th>
+                      <th scope="col">Judul</th>
+                      <th scope="col">Pembimbing 1</th>
+                      <th scope="col">Pembimbing 2</th>
+                      <th scope="col">Proposal</th>
+                      <th scope="col">Portofolio</th>
+                    </tr>
+                  </thead>
+                  <tbody id="rp-body"></tbody>
+                </table>
               </div>
             </div>
           </div>
