--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="stylesheet" href="../../assets/css/styles.min.css" />
     <link rel="stylesheet" href="../../assets/css/table.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
   </head>
 
   <body>
