Tambahkan tombol Aksi
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -226,10 +226,11 @@
                     <tr>
                       <th scope="col">NPM</th>
                       <th scope="col">Judul</th>
-                      <th scope="col">Pembimbing 1</th>
+                      <th  scope="col">Pembimbing 1</th>
                       <th scope="col">Pembimbing 2</th>
                       <th scope="col">Proposal</th>
                       <th scope="col">Portofolio</th>
+                      <th style="width: 12.5%;" scope="col">Aksi</th>
                     </tr>
                   </thead>
                   <tbody id="pm-body"></tbody>
@@ -248,6 +249,7 @@
                       <th scope="col">Pembimbing 2</th>
                       <th scope="col">Proposal</th>
                       <th scope="col">Portofolio</th>
+                      <th style="width: 12.5%;" scope="col">Aksi</th>
                     </tr>
                   </thead>
                   <tbody id="na-body"></tbody>
@@ -266,6 +268,7 @@
                       <th scope="col">Pembimbing 2</th>
                       <th scope="col">Proposal</th>
                       <th scope="col">Portofolio</th>
+                      <th style="width: 12.5%;" scope="col">Aksi</th>
                     </tr>
                   </thead>
                   <tbody id="rp-body"></tbody>
