--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -166,7 +166,7 @@
           <div class="card">
             <h2 class="mb-4">Dashboard Koordinator</h2>
 
-            <div class="card-body">
+            <div class="card-body" hidden>
               <h2 class="mb-4">Statistik Pengajuan</h2>
               <div id="body-matkul" class="row">
                 <div class="col-md-4">
