--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -237,9 +237,9 @@
                 </table>
               </div>
             </div>
-            <div class="card-body">
+            <div>
               <h2 class="mb-4">Pengajuan Telah Di Approve</h2>
-              <div class="row">
+              <div>
                 <table class="table table-dark">
                   <thead>
                     <tr>
@@ -256,9 +256,9 @@
                 </table>
               </div>
             </div>
-            <div class="card-body">
-              <h2 class="mb-4">Pengajuan Yang di Revisi</h2>
-              <div class="row">
+            <div>
+              <h2>Pengajuan Yang di Revisi</h2>
+              <div>
                 <table class="table table-dark">
                   <thead>
                     <tr>
