Ubah tampilan data pengajuan i2
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/detail.html
+++ b/koordinator/i2/detail.html
@@ -187,35 +187,35 @@
                   <tbody>
                     <tr>
                         <td><b>NPM</b></td>
-                        <td>N/A</td>
+                        <td id="npm_value">N/A</td>
                     </tr>
                     <tr>
                         <td><b>Usulan Pembimbing 1</b></td>
-                        <td>Lorem ipsum dolor sit amet</td>
+                        <td id="pembimbing1_value">Lorem ipsum dolor sit amet</td>
                     </tr>
                     <tr>
                       <td><b>Usulan Pembimbing 2</b></td>
-                      <td>Lorem ipsum dolor sit amet</td>
+                      <td id="pembimbing2_value">Lorem ipsum dolor sit amet</td>
                     </tr>
                     <tr>
                       <td><b>Judul Propsal</b></td>
-                      <td>Lorem ipsum dolor sit amet</td>
+                      <td id="judul_value">Lorem ipsum dolor sit amet</td>
                     </tr>
                     <tr>
                         <td><b>Status</b></td>
-                        <td>Belum di-approve</td>
+                        <td id="status_value">Belum di-approve</td>
                     </tr> 
                     <tr>
                         <td><b>Catatan (Revisi)</b></td>
-                        <td>Tidak Ada</td>
+                        <td id="catatan_value">Tidak Ada</td>
                     </tr>
                     <tr>
                         <td><b>Dokumen Proposal</b></td>
-                        <td><button type="button" class="btn btn-outline-primary">Lihat</button></td>
+                        <td id="btn_proposal"></td>
                     </tr>  
                     <tr>
                         <td><b>Dokumen Portofolio</b></td>
-                        <td><button type="button" class="btn btn-outline-primary">Lihat</button></td>
+                        <td id="btn_portofolio"></td>
                     </tr>  
                 </tbody>
                 </table>
