--- a/koordinator/i2/detail.html
+++ b/koordinator/i2/detail.html
@@ -226,6 +226,7 @@
         </div>
       </div>
     </div>
+    <script src="./static/detail.js" type="module"></script>
     <script src="../../assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="../../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../assets/js/sidebarmenu.js"></script>
