Fix tombol back pada detail page
Signed-off-by: HeroBuxx <me@herobuxx.me>

--- a/koordinator/i2/detail.html
+++ b/koordinator/i2/detail.html
@@ -81,7 +81,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link"
-                  href="/index.html"
+                  href="."
                   aria-expanded="false"
                 >
                   <span>
