--- a/koordinator/i2/index.html
+++ b/koordinator/i2/index.html
@@ -12,7 +12,22 @@
     <link rel="stylesheet" href="../../assets/css/styles.min.css" />
     <link rel="stylesheet" href="../../assets/css/table.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <style>
+      .modal-dialog {
+          max-width: 800px;
+          margin: 0 auto;
+      }
 
+      .modal-body {
+          width: 100%;
+      }
+
+      /* Adjust the iframe width */
+      .modal-body iframe {
+          width: 100%;
+          height: 860px;
+      }
+    </style>
   </head>
 
   <body>
@@ -280,6 +295,7 @@
         </div>
       </div>
     </div>
+
     <script src="./static/index.js" type="module"></script>
     <script src="../../assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="../../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
